# clice

./: .clang-format  .dockerignore  .gitignore  404.html  CMakeLists.txt  README.md  hashmap.json  index.html  pixi.toml  xmake.lua
.claude/commands/: upgrade-llvm.md
.github/actions/: setup-clice.yml
.github/workflows/: benchmark.yml  build-llvm.yml  check-format.yml  ci.yml  cmake.yml  cross-pair.yml  cross-test.yml  deploy-docs.yml  dev-container-build-push.yml  docker-build-push.yml  editor-test.yml  format.yml  llvm.yml  main.yml  native-test.yml  nightly.yml  package.yml  prune-llvm.yml  publish-clice.yml  publish-vscode.yml  release-llvm.yml  release-vscode.yml  release.yml  smoke.yml  test-cmake.yml  test-macos-cleanup.yml  test-xmake.yml  upload-llvm.yml  vscode.yml  xmake.yml
assets/: app.Bc231oom.js  design_architecture.md.DMww_ZBX.js  design_architecture.md.DMww_ZBX.lean.js  design_compilation.md.D3SXjwMq.js  design_compilation.md.D3SXjwMq.lean.js  design_header-context.md.5QZE4E0m.js  design_header-context.md.5QZE4E0m.lean.js  design_index.md.BZzdI-cN.lean.js  design_template-resolver.md.tMu5Udmv.js  design_template-resolver.md.tMu5Udmv.lean.js  dev_build.md.CWRy1_Wn.js  dev_build.md.DL9NDoQ5.js  dev_build.md.DL9NDoQ5.lean.js  dev_build.md.T9PCXam-.js  dev_build.md.T9PCXam-.lean.js  dev_build.md.XNDsORS_.js  dev_build.md.XNDsORS_.lean.js  dev_contribution.md.1UGAvgxB.js  dev_contribution.md.1UGAvgxB.lean.js  dev_extension.md.Ce3hHUS_.js  dev_test-and-debug.md.BHA6oU4c.js  dev_test-and-debug.md.BHA6oU4c.lean.js  dev_test-and-debug.md.CsCb8abk.js  guide_configuration.md.ysIfXnxX.js  guide_configuration.md.ysIfXnxX.lean.js  guide_quick-start.md.B7Mkllxn.js  guide_quick-start.md.B7Mkllxn.lean.js  guide_what-is-clice.md.O0YPF2TW.js  guide_what-is-clice.md.O0YPF2TW.lean.js  index.md.DJKvrzH-.lean.js  style.BgeHq3QO.css  style.DAN7L8E8.css  zh_design_architecture.md.D7Ym-Wzu.js  zh_design_architecture.md.D7Ym-Wzu.lean.js  zh_design_compilation.md.DsJAK6aW.js  zh_design_compilation.md.DsJAK6aW.lean.js  zh_design_header-context.md.BzHlAAVy.js  zh_design_header-context.md.BzHlAAVy.lean.js  zh_design_index.md.BeRCbz5d.js  zh_design_template-resolver.md.DM4cVjMO.js  (+20 more)
assets/chunks/: theme.CHX7cXpB.js
benchmarks/: index_benchmark.cpp  scan_benchmark.cpp
benchmarks/pch_chain/: README.md  bench_all_headers.sh  bench_pch_chain.sh  find_breakpoint.sh  find_exact.sh  isolate_cmath.sh  minimal_repro.sh  pch_chain_benchmark.cpp  test_versions.sh
cmake/: builtin-libraries.cmake  llvm.cmake  package.cmake  release.cmake  toolchain.cmake
config/: build_config.py  default-toolchain-version.json  llvm-manifest.json  prebuilt-llvm.json
design/: architecture.html  compilation.html  header-context.html  index.html  template-resolver.html
dev/: build.html  contribution.html  extension.html  test-and-debug.html
docker/linux/: Dockerfile  build.sh  container-entrypoint.sh  run.sh  test_build.sh
docs/: design.md  package.json  pnpm-lock.yaml  upgrade-llvm.md
docs/.vitepress/: config.ts
docs/agent/: design.md  implement.md  note.md
docs/en/: architecture.md  sidebar.yaml
docs/fr/: index.md
docs/zh/: sidebar.yaml
editors/nvim/: README.md
editors/vscode/: README.md  package.json  pnpm-lock.yaml
editors/vscode/samples/cmake-workspace/: CMakeLists.txt  README.md  greeting.cc  greeting.h  greeting_module.cppm  main.cc  main_module.cc
guide/: configuration.html  quick-start.html  what-is-clice.html
include/AST/: Resolver.h  Selection.h  SourceCode.h  Utility.h
include/Async/: Event.h  FileSystem.h  Task.h
include/Compiler/: Command.h  Compilation.h  CompilationDatabase.h  CompilationUnit.h  Diagnostic.h  Directive.h  Scan.h  Tidy.h  Toolchain.h
include/Feature/: Hover.h
include/Index/: IncludeGraph.h  MergedIndex.h  TUIndex.h  schema.fbs
include/Protocol/: Basic.h  TextDocument.h
include/Server/: Config.h  Indexer.h  Plugin.h  PluginDef.h  PluginProtocol.h  Server.h  Utility.h
include/Support/: Binary.h  Enum.h  FileSystem.h  JSON.h  Logging.h  ObjectPool.h  StringPool.h
include/Test/: Annotation.h  Platform.h  Runner.h  TExpr.h  Test.h  Test2.h  Tester.h
scripts/: activate_asan.bat  activate_cross_linux.sh  activate_linux.sh  build-llvm-libs.py  build-llvm.py  download-llvm.sh  llvm-components.json  package_llvm_install.py  plugin-def.py  prune-llvm-bin.py  release-llvm.py  setup-llvm.py  update-llvm-version.py  upload-llvm.py  validate-llvm-components.py  watch-socket.sh
scripts/analyzers/: extract_semantic_highlighting_codex.py
src/: clice.cc
src/AST/: Resolver.cpp  Selection.cpp  Utility.cpp
src/Compiler/: Command.cpp  Compilation.cpp  CompilationDatabase.cpp  CompilationUnit.cpp  CompilationUnitImpl.h  Diagnostic.cpp  Directive.cpp  Driver.h  Implement.h  Module.cpp  Scan.cpp  Tidy.cpp  TidyImpl.h  Toolchain.cpp
src/Driver/: unit_tests.cc
src/Feature/: CodeCompletion.cpp  Hover.cpp  SignatureHelp.cpp
src/Index/: MergedIndex.cpp  ProjectIndex.cpp  Serialization.cpp  Serialization.h  TUIndex.cpp  USRGeneration.cpp
src/Server/: Config.cpp  Document.cpp  Feature.cpp  Implement.h  Indexer.cpp  Lifecycle.cpp  Plugin.cpp  Server.cpp
src/Support/: Doxygen.cpp  Logging.cpp  StringPool.cpp
src/command/: argument_parser.cpp  argument_parser.h  command.cpp  command.h  search_config.cpp  toolchain.cpp  toolchain.h  toolchain_provider.cpp  toolchain_provider.h
src/compile/: command.cpp  command.h  compilation.cpp  compilation.h  compilation_unit.cpp  diagnostic.cpp  directive.cpp  directive.h  implement.h  preamble.cpp  search_config.cpp  search_config.h  tidy.cpp  toolchain.cpp  toolchain_provider.cpp  toolchain_provider.h
src/feature/: code_completion.cpp  diagnostics.cpp  document_highlight.cpp  document_links.cpp  document_symbols.cpp  feature.h  folding_ranges.cpp  formatting.cpp  hover.cpp  (+3 more)
tests/: cdb.py  conftest.py  prepare.py  replay.py
tests/data/modules/global_module_fragment/: CMakeLists.txt
tests/data/modules/gmf_with_import/: CMakeLists.txt
tests/data/modules/partition_with_gmf/: CMakeLists.txt
zh/: index.html
(+548 files in other folders)
